mosaic-tty/src/commonMain/c/mosaic-test-tty.h

typedef struct MosaicTestTtyImpl MosaicTestTty;
typedef struct MosaicTestTtyInitResult {
	MosaicTestTty *testTty;
	uint32_t error;
	bool already_bound;
} MosaicTestTtyInitResult;
MOSAIC_EXPORT MosaicTestTtyInitResult testTty_init();
MOSAIC_EXPORT MosaicTty *testTty_getTty(MosaicTestTty *testTty);
MOSAIC_EXPORT MosaicTtyIoResult testTty_write(MosaicTestTty *testTty, uint8_t *buffer, int count);
MOSAIC_EXPORT MosaicTtyIoResult testTty_read(MosaicTestTty *testTty, uint8_t *buffer, int count);