mosaic-tty/src/jvmJdk22/java/com/jakewharton/mosaic/tty/Libmosaic.java


    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MosaicTtyTerminalSizeResult tty_currentTerminalSize(MosaicTty *tty)
     * }
     */
    public static FunctionDescriptor tty_currentTerminalSize$descriptor() {
        return tty_currentTerminalSize.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MosaicTtyTerminalSizeResult tty_currentTerminalSize(MosaicTty *tty)
     * }
     */
    public static MethodHandle tty_currentTerminalSize$handle() {
        return tty_currentTerminalSize.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MosaicTtyTerminalSizeResult tty_currentTerminalSize(MosaicTty *tty)
     * }
     */
    public static MemorySegment tty_currentTerminalSize$address() {
        return tty_currentTerminalSize.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MosaicTtyTerminalSizeResult tty_currentTerminalSize(MosaicTty *tty)
     * }
     */
    public static MemorySegment tty_currentTerminalSize(SegmentAllocator allocator, MemorySegment tty) {
        var mh$ = tty_currentTerminalSize.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("tty_currentTerminalSize", allocator, tty);
            }
            return (MemorySegment)mh$.invokeExact(allocator, tty);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class tty_reset {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Libmosaic.C_INT,
            Libmosaic.C_POINTER
        );

        public static final MemorySegment ADDR = Libmosaic.findOrThrow("tty_reset");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * uint32_t tty_reset(MosaicTty *tty)
     * }
     */
    public static FunctionDescriptor tty_reset$descriptor() {
        return tty_reset.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * uint32_t tty_reset(MosaicTty *tty)
     * }
     */
    public static MethodHandle tty_reset$handle() {
        return tty_reset.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * uint32_t tty_reset(MosaicTty *tty)
     * }
     */
    public static MemorySegment tty_reset$address() {
        return tty_reset.ADDR;
    }

    /**
     * {@snippet lang=c :
     * uint32_t tty_reset(MosaicTty *tty)
     * }
     */
    public static int tty_reset(MemorySegment tty) {
        var mh$ = tty_reset.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("tty_reset", tty);
            }
            return (int)mh$.invokeExact(tty);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class tty_free {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Libmosaic.C_INT,
            Libmosaic.C_POINTER
        );

        public static final MemorySegment ADDR = Libmosaic.findOrThrow("tty_free");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * uint32_t tty_free(MosaicTty *tty)
     * }
     */
    public static FunctionDescriptor tty_free$descriptor() {
        return tty_free.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * uint32_t tty_free(MosaicTty *tty)
     * }
     */
    public static MethodHandle tty_free$handle() {
        return tty_free.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * uint32_t tty_free(MosaicTty *tty)
     * }
     */
    public static MemorySegment tty_free$address() {
        return tty_free.ADDR;
    }

    /**
     * {@snippet lang=c :
     * uint32_t tty_free(MosaicTty *tty)
     * }
     */
    public static int tty_free(MemorySegment tty) {
        var mh$ = tty_free.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("tty_free", tty);
            }
            return (int)mh$.invokeExact(tty);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    /**
     * Variadic invoker class for:
     * {@snippet lang=c :
     * MosaicTestTtyInitResult testTty_init()
     * }
     */
    public static class testTty_init {
        private static final FunctionDescriptor BASE_DESC = FunctionDescriptor.of(
                MosaicTestTtyInitResult.layout()        );
        private static final MemorySegment ADDR = Libmosaic.findOrThrow("testTty_init");

        private final MethodHandle handle;
        private final FunctionDescriptor descriptor;
        private final MethodHandle spreader;

        private testTty_init(MethodHandle handle, FunctionDescriptor descriptor, MethodHandle spreader) {
            this.handle = handle;
            this.descriptor = descriptor;
            this.spreader = spreader;
        }

        /**
         * Variadic invoker factory for:
         * {@snippet lang=c :
         * MosaicTestTtyInitResult testTty_init()
         * }
         */
        public static testTty_init makeInvoker(MemoryLayout... layouts) {
            FunctionDescriptor desc$ = BASE_DESC.appendArgumentLayouts(layouts);
            Linker.Option fva$ = Linker.Option.firstVariadicArg(BASE_DESC.argumentLayouts().size());
            var mh$ = Linker.nativeLinker().downcallHandle(ADDR, desc$, fva$);
            var spreader$ = mh$.asSpreader(Object[].class, layouts.length);
            return new testTty_init(mh$, desc$, spreader$);
        }

        /**
         * {@return the address}
         */
        public static MemorySegment address() {
            return ADDR;
        }

        /**
         * {@return the specialized method handle}
         */
        public MethodHandle handle() {
            return handle;
        }

        /**
         * {@return the specialized descriptor}
         */
        public FunctionDescriptor descriptor() {
            return descriptor;
        }

        public MemorySegment apply(SegmentAllocator allocator, Object... x0) {
            try {
                if (TRACE_DOWNCALLS) {
                    traceDowncall("testTty_init", allocator, x0);
                }
                return (MemorySegment) spreader.invokeExact(allocator, x0);
            } catch(IllegalArgumentException | ClassCastException ex$)  {
                throw ex$; // rethrow IAE from passing wrong number/type of args
            } catch (Throwable ex$) {
               throw new AssertionError("should not reach here", ex$);
            }
        }
    }

    private static class testTty_getTty {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Libmosaic.C_POINTER,
            Libmosaic.C_POINTER
        );

        public static final MemorySegment ADDR = Libmosaic.findOrThrow("testTty_getTty");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MosaicTty *testTty_getTty(MosaicTestTty *testTty)
     * }
     */
    public static FunctionDescriptor testTty_getTty$descriptor() {
        return testTty_getTty.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MosaicTty *testTty_getTty(MosaicTestTty *testTty)
     * }
     */
    public static MethodHandle testTty_getTty$handle() {
        return testTty_getTty.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MosaicTty *testTty_getTty(MosaicTestTty *testTty)
     * }
     */
    public static MemorySegment testTty_getTty$address() {
        return testTty_getTty.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MosaicTty *testTty_getTty(MosaicTestTty *testTty)
     * }
     */
    public static MemorySegment testTty_getTty(MemorySegment testTty) {
        var mh$ = testTty_getTty.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("testTty_getTty", testTty);
            }
            return (MemorySegment)mh$.invokeExact(testTty);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class testTty_write {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            MosaicTtyIoResult.layout(),
            Libmosaic.C_POINTER,
            Libmosaic.C_POINTER,
            Libmosaic.C_INT
        );

        public static final MemorySegment ADDR = Libmosaic.findOrThrow("testTty_write");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MosaicTtyIoResult testTty_write(MosaicTestTty *testTty, uint8_t *buffer, int count)
     * }
     */
    public static FunctionDescriptor testTty_write$descriptor() {
        return testTty_write.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MosaicTtyIoResult testTty_write(MosaicTestTty *testTty, uint8_t *buffer, int count)
     * }
     */
    public static MethodHandle testTty_write$handle() {
        return testTty_write.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MosaicTtyIoResult testTty_write(MosaicTestTty *testTty, uint8_t *buffer, int count)
     * }
     */
    public static MemorySegment testTty_write$address() {
        return testTty_write.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MosaicTtyIoResult testTty_write(MosaicTestTty *testTty, uint8_t *buffer, int count)
     * }
     */
    public static MemorySegment testTty_write(SegmentAllocator allocator, MemorySegment testTty, MemorySegment buffer, int count) {
        var mh$ = testTty_write.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("testTty_write", allocator, testTty, buffer, count);
            }
            return (MemorySegment)mh$.invokeExact(allocator, testTty, buffer, count);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class testTty_read {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            MosaicTtyIoResult.layout(),
            Libmosaic.C_POINTER,
            Libmosaic.C_POINTER,
            Libmosaic.C_INT
        );

        public static final MemorySegment ADDR = Libmosaic.findOrThrow("testTty_read");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MosaicTtyIoResult testTty_read(MosaicTestTty *testTty, uint8_t *buffer, int count)
     * }
     */
    public static FunctionDescriptor testTty_read$descriptor() {
        return testTty_read.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MosaicTtyIoResult testTty_read(MosaicTestTty *testTty, uint8_t *buffer, int count)
     * }
     */
    public static MethodHandle testTty_read$handle() {
        return testTty_read.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MosaicTtyIoResult testTty_read(MosaicTestTty *testTty, uint8_t *buffer, int count)
     * }
     */
    public static MemorySegment testTty_read$address() {
        return testTty_read.ADDR;
    }
